# psycoholika

./: .gitignore  CMakeLists.txt  README.md  Team210.nfo  intro.cpp
4klang/: 4klang.h  4klang.inc  patterns.dbg
gfx/: gfx.frag
msx/: music.asm
shaders/patterns/: Buffer A.frag  Common.frag  Image.frag  shader.ron
sketches/: bullencoolen.frag  extract.py  fuckcovid.frag  funnycovid.frag  happynewyear.frag  hubschraubereintopf.frag  orgelsaft.frag  psycoholika.frag  psyconfetti.frag  team210.frag
